%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Locomotion
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: MoveForward
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MoveSides
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Movement
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsGrounded
    m_Type: 1
    m_DefaultFloat: 1
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VerticalSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IK_leftFoot
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IK_rightFoot
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: TargetLock
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsSliding
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsDashing
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Jump
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpChain
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: TimeScale
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: NormalX
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: NormalY
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: NormalZ
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: LandForce
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Land
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: TurnSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107310315690748488}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: Land
    m_StateMachine: {fileID: 1107811339074442772}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 1
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 1
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: IK
    m_StateMachine: {fileID: 1107766468293328380}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &206032402873936456
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Airborne
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 206907489441872892}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 206961465702029662}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: Movement
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206274138772584088
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Run
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74538193784720558, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0.75}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74205822642351040, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0.14285715
    m_Position: {x: -0.6, y: 0.6}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74496820790644724, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0.2857143
    m_Position: {x: 0.6, y: 0.6}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74915479222496890, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0.42857143
    m_Position: {x: -0.75, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74239056794477724, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0.5714286
    m_Position: {x: 0.75, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74735241470069346, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0.71428573
    m_Position: {x: -0.6, y: -0.6}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74540808178968150, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 0.85714287
    m_Position: {x: 0.6, y: -0.6}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74354088661771286, guid: d0448feeb4f2d4a16a49098ccac021d3,
      type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: -0.75}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: MoveSides
  m_BlendParameterY: MoveForward
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &206295684501548742
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Idle
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74621574179526766, guid: f81a39aaf523943a78374a4b9573bfd7,
      type: 2}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74822647580234304, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74485990714282610, guid: f81a39aaf523943a78374a4b9573bfd7,
      type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: TurnSpeed
  m_BlendParameterY: Blend
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206428465339792390
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Movement
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 206517815573248594}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 206472823598657704}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: IsDashing
  m_BlendParameterY: MoveForward
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206462368567893614
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Grounded
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 206295684501548742}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 206904378903322842}
    m_Threshold: 0.5
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 206274138772584088}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: Movement
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206472823598657704
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Dashing
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74655201844839838, guid: a94b9a3d5b0ac4bc98b504a240689527,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74817274452924804, guid: a94b9a3d5b0ac4bc98b504a240689527,
      type: 2}
    m_Threshold: 0.33333334
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74326893719215212, guid: a94b9a3d5b0ac4bc98b504a240689527,
      type: 2}
    m_Threshold: 0.6666667
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74645545148672480, guid: a94b9a3d5b0ac4bc98b504a240689527,
      type: 2}
    m_Threshold: 1
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: MoveSides
  m_BlendParameterY: MoveForward
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &206517815573248594
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Locomotion
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 206032402873936456}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 206462368567893614}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: IsGrounded
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206521734978965818
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74632802267837816, guid: 4bb5d78fc62e44c54aa8fc7c117b5fb2,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74087652434729362, guid: 4bb5d78fc62e44c54aa8fc7c117b5fb2,
      type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: LandForce
  m_BlendParameterY: MoveForward
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206904378903322842
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Walk
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74409621139028792, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0.35}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74927045030915156, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0.14285715
    m_Position: {x: -0.27, y: 0.27}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74124553528121542, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0.2857143
    m_Position: {x: 0.27, y: 0.27}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74476075724409954, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0.42857143
    m_Position: {x: -0.35, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74843495044726866, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0.5714286
    m_Position: {x: 0.35, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74889151046035584, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0.71428573
    m_Position: {x: 0.27, y: -0.27}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74986827028995018, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 0.85714287
    m_Position: {x: -0.27, y: -0.27}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74585805865667330, guid: 7adf3f4052f80468ab57a887ef72a785,
      type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: -0.35}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: MoveSides
  m_BlendParameterY: MoveForward
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &206907489441872892
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Idle
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74814099588608990, guid: 23f3f421836ee4d8f900f8b383504990,
      type: 2}
    m_Threshold: -3
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74830290616849974, guid: 23f3f421836ee4d8f900f8b383504990,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74152913372096416, guid: 23f3f421836ee4d8f900f8b383504990,
      type: 2}
    m_Threshold: 3
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: VerticalSpeed
  m_BlendParameterY: Blend
  m_MinThreshold: -3
  m_MaxThreshold: 3
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &206961465702029662
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Moving
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 74334132363051590, guid: 23f3f421836ee4d8f900f8b383504990,
      type: 2}
    m_Threshold: -3
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74250603194923206, guid: 23f3f421836ee4d8f900f8b383504990,
      type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 74780121148821644, guid: 23f3f421836ee4d8f900f8b383504990,
      type: 2}
    m_Threshold: 3
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveForward
    m_Mirror: 0
  m_BlendParameter: VerticalSpeed
  m_BlendParameterY: Blend
  m_MinThreshold: -3
  m_MaxThreshold: 3
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!1102 &1102756348614642094
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Movement
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 1
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 206428465339792390}
  m_Tag: 
  m_SpeedParameter: TimeScale
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &1107310315690748488
AnimatorStateMachine:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1102756348614642094}
    m_Position: {x: 252, y: 168, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 48, y: 120, z: 0}
  m_EntryPosition: {x: 48, y: 168, z: 0}
  m_ExitPosition: {x: 48, y: 216, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1102756348614642094}
--- !u!1107 &1107766468293328380
AnimatorStateMachine:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Land
  m_ChildStates: []
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 0}
